--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "se_project_express",
+  "name": "crossworld_backend",
   "version": "1.0.0",
-  "description": "The back-end project is focused on creating a server for the WTWR application. You’ll gain a deeper understanding of how to work with databases, set up security and testing, and deploy web applications on a remote machine. The eventual goal is to create a server with an API and user authorization.\r ## Running the Project\r `npm run start` — to launch the server",
-  "main": "app.js",
+  "description": "Backend for the Crossworld Creative project",
+  "main": "src/app.js",
   "scripts": {
     "lint": "npx eslint .",
-    "start": "node app.js",
-    "dev": "nodemon app.js"
+    "start": "node src/app.js",
+    "dev": "nodemon src/app.js"
   },
   "repository": {
     "type": "git",
@@ -28,10 +28,10 @@
     "winston": "^3.19.0"
   },
   "devDependencies": {
-    "eslint": "^8.57.1",
-    "eslint-config-airbnb-base": "^15.0.0",
+    "@eslint/js": "^10.0.1",
+    "eslint": "^10.0.0",
     "eslint-config-prettier": "^8.10.2",
-    "eslint-plugin-import": "^2.32.0",
+    "globals": "^17.3.0",
     "nodemon": "^3.1.11",
     "prettier": "^2.8.8"
   }
